modificacoes feitas parte das notas em desenvolvimento

--- a/backup.html
+++ b/backup.html
@@ -2,92 +2,69 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>Sistema Acadêmico IFMS</title>
+        <title>Notas - Sistema Acadêmico</title>
         <meta name="Author" content="Caio Lutz Honda">
-        <meta name="keywords" content="Academico ifms, ifms academico, SIGA ifms, siga">
-        <link href="images/iconIF.svg" type="image/x-icon" rel="icon">
-        <link rel="stylesheet" href="css/index.css">
+        <link href="../images/iconIF.svg" type="image/x-icon" rel="icon">
     </head>
     <body>
         <header>
-            <!-- Inicio da barra superior -->
-            <div id="top-bar">
-                <!--bandeira e texto da bandeira-->
-                <div class="bandeira-lista-brasil">
-                        <img src="images/1200px-Flag_of_Brazil.svg.png" class="images-top-bar" alt="bandeira-brasil">
-                        <ul class="lista-bandeira-brasil">
-                            <li><a class="lista-bandeira-brasil" href="https://gov.br/">BRASIL</a></li>
-                        </ul>
-                </div>
-                <!--Fim da bandeira e do texto da bandeira -->
-                    
-                <!--Inicio das opções do menu da top bar-->
-                <div class="menu">
-                    <ul>
-                        <li id="coronavirus">CORONAVÍRUS (COVID-19)</li>
-                        <li>Simplifique!</li>
-                        <li>Participe</li>
-                        <li>Acesso à informação</li>
-                        <li>Legislação</li>
-                        <li>Canais</li>
-                        <li><img src="images/simbolos_de_Acessibilidade_Libras.png" style="padding: 0;" class="images-top-bar" alt="Libras"></li>
-                    </ul>
-                </div>
-            </div>
-            <!--Fim das opções do menu e da top bar-->
-
-            <!--Inicio da logo do site-->
-            <div class="logo">
-                <ul>
-                    <li><sub>Instituto Federal de Mato Grosso do Sul</sub></li>
-                    <li><span id="header-logo">Sistema Acadêmico</span></li>
-
-                </ul>
-            </div>
-            <!--Fim da logo do site-->
-            <!--Inicio do nav do header-->
-            <div class="wrapper-nav-header">
-                <nav id="selecionador-matrícula">
-                    <form action="#" id="form-selecionado-matricula">
-                        <select class="opcoes-selecionador" name="opcaoDeMatricula" id="seletor-de-matricula">
-                            <option value="tecnico_integrado">Técnico em Informática - Integrado (Em curso)</option>
-                            <option value="selecione_uma_matricula">Selecione uma matrícula</option>
-                        </select>
-                    </form>
-                </nav>
-            </div>
-            <!--Fim do nav do header-->
+            <h1>Sistema Acadêmico - Notas</h1>
         </header>
+        <hr>
         <nav>
             <ul>
-                <li><a href="html/hobbies.html">Hobbies</a></li>
-                <li><a href="html/disciplinas.html">Disciplinas</a></li>
-                <li><a href="html/notas.html">Notas</a></li>
-                <li><a href="html/biblioteca.html">Biblioteca</a></li>
-                <li><a href="html/boletim.html">Boletim</a></li>
+                <li><a href="hobbies.html">Hobbies</a></li>
+                <li><a href="disciplinas.html">Disciplinas</a></li>
+                <li><a href="notas.html">Notas</a></li>
+                <li><a href="biblioteca.html">Biblioteca</a></li>
+                <li><a href="boletim.html">Boletim</a></li>
             </ul>
         </nav>
-
+        <hr>
         <main>
-            <h1>Olá, Camila</h1>
-            <p>Prezado(a) estudante,<br>A partir de agora você passará a ter acesso aos seus dados no Sistema Acadêmico do IFMS.</p>
-            <p>Essa é a segunda de várias etapas que virão. A primeira foi o acesso ao boletim, agora, nesta fase você poderá consultar em tempo real quais as unidades que está matriculado no semestre, ver horários de aula e permanência, bem como acessar notas e faltas, além do boletim.</p>
-            <p>Se você está fazendo mais de um curso no IFMS poderá alternar entre suas diferentes matrículas no canto superior esquerdo da tela, abaixo do texto "Sistema Acadêmico".</p>
-            <p>No menu "<a href="disciplinas.html">Disciplinas</a>" você verá a relação de todas as unidades que está matriculado no semestre atual. Clicando sobre o nome de cada uma, você verá os horários de permanência do(a) professor(a) e os horários locais de aula.</p>
-            <p>No menu "<a href="notas.html">Notas</a>" você conseguirá visualizar todas as notas já lançadas, tanto das unidades atuais quanto daquelas de semestres anteriores e a quantidade de faltas em cada uma delas.</p>
-            <p>Já no menu "<a href="boletim.html">Boletim</a>" você conseguirá verificar, além de sua nota, o número de faltas e o percentual que elas representam. Lembre-se de ter pelo menos 75% de frequência.</p>
-            <p>Em um futuro próximo, novas funcionalidades serão disponibilizadas na Área do Estudante, como solicitação de rematrícula, acesso ao plano de ensino do professor, à matriz curricular do curso, gerar atestado de matrícula, acesso ao histórico escolar, entre outras.</p>
-            <p>Fique à vontade para dar sugestões para melhoria desse espaço.</p>
-            <p>Aproveitem!</p>
-            <p>Pró-Reitoria de Ensino e Reitoria</p>
+            <table>
+                <tr>
+                    <td>Nome: CAMILA YUMI KOIKE</td>
+                    <td>CPF: XXX.XXX.XXX.XX</td>
+                </tr>
+                <tr>
+                    <td>Matrícula: XXXXXXXXXXXXX-X (Em curso)</td>
+                    <td>Curso: Técnico em Informática - Integrado</td>
+                </tr>
+                <tr>
+                    <td>Turno: Matutino</td>
+                    <td>Data de ingresso: xx/xx/xxxx</td>
+                </tr>
+            </table>
+            <hr>
+            <h2>notas</h2>
+            <hr>
+
+            <div class="2021-2">
+                <h2>2021-2</h2>
+                <a href="#">Linguagem de programação 1</a>
+                <br>
+                <a href="#">Matemática</a>
+                <br>
+                <a href="#">Português</a>
+                <br>
+                <a href="#">Ciências</a>
+
+            </div>
+            <div class="2022-1">
+                <h2>2022-1</h2>
+                <a href="#">Linguagem de Programação 2</a>
+                <br>
+                <a href="#">Programação Front-End</a>
+                <br>
+                <a href="#">Orientação a Objetos</a>
+                <br>
+                <a href="#">Banco de Dados</a>
+            </div>
         </main>
         <hr>
-        <h1>Últimas notícias</h1>
-        <div>
-            <p>Aberto processo seletivo</p>
-        </div>
-        <hr>
         <footer>
+            <button><a href="../index.html">Voltar</a></button>
             <p>&copy;Todos os direitos reservados;</p>
         </footer>
     </body>
